--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ owner:
     plus: #username
     analytics:
     verify:
-    scholar: #id
+    scholar: #k04bIL4AAAAJ&hl
   facebook: #username
   instagram: #username
   bing-verify:
