--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site wide configuration
 
-title: Trophic Ecology
+title: 
 locale: Brazil
 logo: # filename of a logo image that has been placed into your images directory
 
