--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ logo: # filename of a logo image that has been placed into your images directory
 # Enter the following platform usernames if you would like for them to appear on your site.
 owner:
   name: Karoline Ceron
-  avatar: me.jpg
+  avatar: ![me](me.jpg)
   bio: "Karoline Ceron website"
   email: adenomera@gmail.com
   # Do not include the @ symbol in your Twitter username
