--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 
 title: 
 locale: Brazil
-logo: # filename of a logo image that has been placed into your images directory
+logo: ![me](me.jpg)
 
 # Enter the following platform usernames if you would like for them to appear on your site.
 owner:
