--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 
 title: 
 locale: Brazil
-logo: ![me](me.jpg)
+logo: #
 
 # Enter the following platform usernames if you would like for them to appear on your site.
 owner:
