--- a/_config.yml
+++ b/_config.yml
@@ -14,14 +14,14 @@ owner:
   twitter: ceronkarol
   linkedin: #username
   github: karolceron
-  orcid: # 0000-0003-2354-3756
-  researchgate: #Karoline_Ceron
+  orcid: 0000-0003-2354-3756
+  researchgate: Karoline_Ceron
   mendeley: #username
   google:
     plus: #username
     analytics:
     verify:
-    scholar: #k04bIL4AAAAJ&hl
+    scholar: k04bIL4AAAAJ&hl
   facebook: #username
   instagram: #username
   
