--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ logo: #
 owner:
   name: Karoline Ceron
   avatar: me2.jpg
-  bio: "Karoline Ceron website"
+  bio: "My website"
   email: adenomera@gmail.com
   # Do not include the @ symbol in your Twitter username
   twitter: ceronkarol
