--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ owner:
   github: karolceron
   researchgate: Karoline_Ceron
   orcid: 0000-0003-2354-3756
-  linkedin: #username
+  linkedin: karoline-ceron-571b81123
   google:
      scholar: k04bIL4AAAAJ&hl
   
