--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ logo: #
 # Enter the following platform usernames if you would like for them to appear on your site.
 owner:
   name: Karoline Ceron
-  avatar: me2.jpeg
+  avatar: me.jpg
   bio: "My website"
   email: adenomera@gmail.com
   # Do not include the @ symbol in your Twitter username
